--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
 			<!-- end of section -->
 		</div>
 
+		<div class="button-container"></div>
+
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
