--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
 			<!-- end of section -->
 		</div>
 
-		<div class="button-container"></div>
+		<div id="button"></div>
+
+		<div id="form"></div>
 
 		<link
 			rel="stylesheet"
@@ -34,6 +36,12 @@
 			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous"
 		/>
 	</body>
 </html>
