--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,31 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>React App</title>
 		<link rel="stylesheet" href="../src/styles/style.css" />
+		<link
+			defer
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+		<link
+			defer
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous"
+		/>
 	</head>
-	<body>
+	<body class="">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div class="top">
 			<p>company common FAQs</p>
 			<h1>Frequently Asked Questions</h1>
 		</div>
+
+		<div id="dark-mode"></div>
+
 		<div id="root">
 			<!-- section -->
 			<!-- each container -->
@@ -29,19 +47,5 @@
 		<div id="button"></div>
 
 		<div id="form"></div>
-
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-			crossorigin="anonymous"
-		/>
 	</body>
 </html>
