--- a/weather/public/index.html
+++ b/weather/public/index.html
@@ -16,11 +16,18 @@
 			href="https://devchallenges.io/"
 		/>
 
-		<link
+		<!-- <link
 			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
 			rel="stylesheet"
+		/> -->
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap"
+			rel="stylesheet"
 		/>
-    
+
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -28,6 +35,14 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+
+		<script
+			defer
+			src="https://cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js"
+			integrity="sha512-/n/dTQBO8lHzqqgAQvy0ukBQ0qLmGzxKhn8xKrz4cn7XJkZzy+fAtzjnOQd5w55h4k1kUC+8oIe6WmrGUYwODA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 
 		<title>Weather</title>
 	</head>
