--- a/weather/public/index.html
+++ b/weather/public/index.html
@@ -44,6 +44,12 @@
 			referrerpolicy="no-referrer"
 		></script>
 
+		<script
+			defer
+			src="https://cdn.jsdelivr.net/gh/manuelmhtr/countries-and-timezones@latest/dist/index.min.js"
+			type="text/javascript"
+		></script>
+
 		<title>Weather</title>
 	</head>
 	<body>
