--- a/quiz/public/index.html
+++ b/quiz/public/index.html
@@ -39,7 +39,9 @@
 		<title>Country Quiz</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="root">
+			<h1>Country Quiz</h1>
+		</div>
 		<footer>created by <i>tices</i> - devChallenges.io</footer>
 	</body>
 </html>
