fixed wrong score bug

--- a/quiz/public/index.html
+++ b/quiz/public/index.html
@@ -39,8 +39,7 @@
 		<title>Country Quiz</title>
 	</head>
 	<body>
-		<div id="root">
-		</div>
+		<div id="root"></div>
 		<footer>created by <i>tices</i> - devChallenges.io</footer>
 	</body>
 </html>
