--- a/github-jobs/public/index.html
+++ b/github-jobs/public/index.html
@@ -26,7 +26,7 @@
 		<title>Github Jobs</title>
 	</head>
 	<body>
-		<!-- <h1 class="title"><i>Github</i> Jobs</h1> -->
+		<h1 class="title"><i>Github</i> Jobs</h1>
 		<div id="root"></div>
 	</body>
 </html>
