can get location of user

--- a/github-jobs/public/index.html
+++ b/github-jobs/public/index.html
@@ -23,6 +23,7 @@
 			referrerpolicy="no-referrer"
 		/>
 
+		<link rel="shortcut icon" href="job-icon.png" type="image/x-icon" />
 		<title>Github Jobs</title>
 	</head>
 	<body>
