--- a/interactive-comment-section/public/index.html
+++ b/interactive-comment-section/public/index.html
@@ -7,8 +7,21 @@
 			content="width=device-width, initial-scale=1,
   maximum-scale=5"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
 
-		<title></title>
+		<link
+			rel="shortcut icon"
+			href="favicon-32x32.png"
+			type="image/x-icon"
+		/>
+		<title>Interactive Comment Section</title>
 	</head>
-	<body></body>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
